Added initial content

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
 
 </head>
 <body>
-    <nav class="light-blue darken-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-
-      <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    <div class="profile-picture">
+        <img class="ui medium centered circular image" src="images/profile-picture.jpg">
     </div>
-    </nav>
 
-    <div class="embed-responsive embed-responsive-16by9">
-     <iframe class="embed-responsive-item" src="https://sketchfab.com/models/2f3dff9ecfe54681b47ba58d7ef77456/embed?autospin=0.2&amp;autostart=1&amp;transparent=1&amp;ui_related=0" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
-    </div>
+    <header>
+        <div class="name-header">
+            <h1 class="ui center aligned">Seran Thirugnanam</h1>
+        </div>
+
+        <div class="education-header">
+            <h3 class="ui center aligned">Mechatronics Systems Engineering</h2>
+            <h3 class="ui center aligned">Western University, 2018</h2>
+        </div>
+    </header>
+
+
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
