--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class="nav-wrapper blue-grey darken-4" id="navigation-bar">
 
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="sass.html">How it Works</a></li>
-        <li><a href="badges.html">FAQ</a></li>
+        <li><a href="#about-screen">How it Works</a></li>
+        <li><a href="#faq-screen">FAQ</a></li>
         <li><a href="collapsible.html">Apply</a></li>
       </ul>
-      <a class="hide-on-med-and-down brand-logo right" target="_blank" title="follow me on facebook" href="https://www.facebook.com/knackatwestern/"><img class="" alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
+      <a class="hide-on-med-and-down brand-logo right" target="x_blank" title="follow me on facebook" href="https://www.facebook.com/events/1134831969887098/"><img class="" alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
     </div>
   </nav>
 
@@ -73,7 +73,7 @@
           <img src="assets/button.png" class="responsive-img">
           <h5 class="white-text center">Learn It.</h5>
           <p class="grey-text light text-lighten-2">If you're looking to learn a new, tangible skill that's outside of something could learn in any class, sign up below to stay in the loop! We'll keep you updated as we continue to hash out the details. </p>
-          <a href="https://seran.typeform.com/to/suWxpV" id="teachit-button" class="center btn-large waves-effect waves-light orange darken-1">Stay in the Loop for Learn It.</a>
+          <a href="https://seran.typeform.com/to/TeIpWP" id="learnit-button" class="center btn-large waves-effect waves-light orange darken-1">Stay in the Loop</a>
           <br><br>
         </div>
       </div>
@@ -94,38 +94,38 @@
     <p style="margin-left:2.5em">How to do stand-up comedy</p>
     <p style="margin-left:2.5em">How to color (I still struggle to stay inside the lines)</p>
   </blockquote>
-
+  <br>
   <h5 class="grey-text text-lighten-3">I'm not sure if I can teach _________.</h5>
   <blockquote class="fade-on-scroll grey-text text-lighten-3">
     Most likely the answer is yes! The most import thing is for you to <a href="https://seran.typeform.com/to/suWxpV" class="orange-text text-darken-1">apply!</a>
-    You can also message us on our <a href="https://www.facebook.com/knackatwestern/" class="orange-text">Facebook Page</a> and we can guide you in the right direction!
+    You can also message us on our <a href="https://www.facebook.com/events/1134831969887098/" class="orange-text">Facebook Page</a> and we can guide you in the right direction!
   </blockquote>
-
+  <br>
   <h5 class="grey-text text-lighten-3">Can I also attend other workshops if I'm teaching one?</h5>
   <blockquote class="fade-on-scroll grey-text text-lighten-3">
     Yes, absolutely! In fact, we encourage this. Ideally everyone who runs workshops will also attend others.
   </blockquote>
-
+  <br>
   <h5 class="grey-text text-lighten-3">Will there be food?</h5>
   <blockquote class="fade-on-scroll grey-text text-lighten-3">
-    Yup. We'll be providing you with a lunch during the event. If you have any dietary restrictions it's important that you fill out our <a href="https://seran.typeform.com/to/suWxpV" class="orange-text">Learn It. form</a>.
+    Yup. We'll be providing you with a lunch during the event. If you have any dietary restrictions it's important that you fill out our <a href="https://seran.typeform.com/to/TeIpWP" class="orange-text">Learn It. form</a>.
   </blockquote>
-
+  <br>
   <h5 class="grey-text text-lighten-3">How long are each session?</h5>
   <blockquote class="fade-on-scroll grey-text text-lighten-3">
     Each session will be between 30 minutes and two hours.
   </blockquote>
-
+  <br>
   <h5 class="grey-text text-lighten-3">Do I have to participate in every workshop?</h5>
   <blockquote class="fade-on-scroll grey-text text-lighten-3">
     No, however we encourage you to step outside of your comfort zone and try something new :).
   </blockquote>
-
+  <br>
   <h5 class="grey-text text-lighten-3">Where is it?</h5>
   <blockquote class="fade-on-scroll grey-text text-lighten-3">
     Knack at Western will be hosted in <a href="http://www.eng.uwo.ca/cmlp/" class="orange-text">Claudette MacKay-Lassonde Pavilion (CMLP)</a> and <a href="http://www.uwo.ca/its/ctg/classrooms/spencer_engineering_building/index.html" class="orange-text">Spencer Engineering Building (SEB)</a>. Specific rooms will be announced soon!
   </blockquote>
-
+  <br>
   <h5 class="grey-text text-lighten-3">What should I bring?</h5>
   <blockquote class="fade-on-scroll grey-text text-lighten-3">
     <p>
@@ -150,9 +150,6 @@
   <div class="footer-copyright">
   <div class="container valign-wrapper">
       Made with <i class="valign fade-on-load blue-text small material-icons">favorite</i><a class="white-text" href="https://www.facebook.com/knackatwestern/"> by the Knack at Western Team</a>
-    </div>
-    <div class="container">
-      Copright 2017 <a class="orange-text text-lighten-3" href="#">Knack at Western</a>
     </div>
   </div>
 </footer>
