Fixed broken link for apply option in nav bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a href="#about-screen">How it Works</a></li>
         <li><a href="#faq-screen">FAQ</a></li>
-        <li><a href="collapsible.html">Apply</a></li>
+        <li><a href="https://seran.typeform.com/to/suWxpV">Apply</a></li>
       </ul>
       <a class="hide-on-med-and-down brand-logo right" target="x_blank" title="follow me on facebook" href="https://www.facebook.com/events/1134831969887098/"><img class="" alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
     </div>
