Changed all fonts to light format'

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <br><br>
       <div class="row center">
         <div class="fade-on-load"><img src="assets/banner.jpeg" class="responsive-img hoverable"></div>
+        <h5 class="grey-text text-lighten-3 fade-on-load light ">February 4, 2017</h5>
         <br><br>
         <p class="flow-text grey-text text-lighten-3" id="event-description">University is focused on learning things out a textbook, but where does that leave your everyday skills?</p>
         <i class="fade-on-load orange-text large material-icons">keyboard_arrow_down</i>
@@ -39,7 +40,7 @@
 
   <div class="container" id="about-screen">
     <div class="section">
-    <h1 class="fade-on-scroll center grey-text text-lighten-3">How it Works</h1>
+    <h1 class="fade-on-scroll center grey-text text-lighten-3 light">How it Works</h1>
 
     <p class="fade-on-scroll center grey-text text-lighten-3 flow-text">Knack at Western consists is an event that lets students run workshops that give handson training on a tangible, new skill.</p>
 
@@ -50,7 +51,7 @@
     </blockquote>
     <br>
 
-    <h3 class="center grey-text text-lighten-3">We've Broken It Down into Two Parts</h3>
+    <h3 class="center grey-text text-lighten-3 light">We've Broken It Down into Two Parts</h3>
 
     <div class="row">
       <div class="hoverable z-depth-3 teachit-card col s12 m6">
@@ -83,10 +84,10 @@
 <br><br>
 
 <div class="container" id="faq-screen">
-  <h1 class="grey-text text-lighten-3 center">Frequently Asked Questions</h1>
+  <h1 class="grey-text text-lighten-3 center light">Frequently Asked Questions</h1>
   <br>
-  <h5 class="grey-text text-lighten-3">What can I teach?</h5>
-  <blockquote class="fade-on-scroll grey-text text-lighten-3">
+  <h5 class="grey-text text-lighten-3 light">What can I teach?</h5>
+  <blockquote class="fade-on-scroll grey-text text-lighten-3 light">
     You can teach any skill that you think is cool. We know that's general so here are some examples:
     <p style="margin-left:2.5em">How to program a quick game</p>
     <p style="margin-left:2.5em">How to juggle</p>
@@ -95,39 +96,39 @@
     <p style="margin-left:2.5em">How to color (I still struggle to stay inside the lines)</p>
   </blockquote>
   <br>
-  <h5 class="grey-text text-lighten-3">I'm not sure if I can teach _________.</h5>
-  <blockquote class="fade-on-scroll grey-text text-lighten-3">
+  <h5 class="grey-text text-lighten-3 light">I'm not sure if I can teach _________.</h5>
+  <blockquote class="fade-on-scroll grey-text text-lighten-3 light">
     Most likely the answer is yes! The most import thing is for you to <a href="https://seran.typeform.com/to/suWxpV" class="orange-text text-darken-1">apply!</a>
     You can also message us on our <a href="https://www.facebook.com/events/1134831969887098/" class="orange-text">Facebook Page</a> and we can guide you in the right direction!
   </blockquote>
   <br>
-  <h5 class="grey-text text-lighten-3">Can I also attend other workshops if I'm teaching one?</h5>
-  <blockquote class="fade-on-scroll grey-text text-lighten-3">
+  <h5 class="grey-text text-lighten-3 light">Can I also attend other workshops if I'm teaching one?</h5>
+  <blockquote class="fade-on-scroll grey-text text-lighten-3 light">
     Yes, absolutely! In fact, we encourage this. Ideally everyone who runs workshops will also attend others.
   </blockquote>
   <br>
-  <h5 class="grey-text text-lighten-3">Will there be food?</h5>
-  <blockquote class="fade-on-scroll grey-text text-lighten-3">
+  <h5 class="grey-text text-lighten-3 light">Will there be food?</h5>
+  <blockquote class="fade-on-scroll grey-text text-lighten-3 light">
     Yup. We'll be providing you with a lunch during the event. If you have any dietary restrictions it's important that you fill out our <a href="https://seran.typeform.com/to/TeIpWP" class="orange-text">Learn It. form</a>.
   </blockquote>
   <br>
-  <h5 class="grey-text text-lighten-3">How long are each session?</h5>
-  <blockquote class="fade-on-scroll grey-text text-lighten-3">
+  <h5 class="grey-text text-lighten-3 light">How long are each session?</h5>
+  <blockquote class="fade-on-scroll grey-text text-lighten-3 light">
     Each session will be between 30 minutes and two hours.
   </blockquote>
   <br>
-  <h5 class="grey-text text-lighten-3">Do I have to participate in every workshop?</h5>
-  <blockquote class="fade-on-scroll grey-text text-lighten-3">
+  <h5 class="grey-text text-lighten-3 light">Do I have to participate in every workshop?</h5>
+  <blockquote class="fade-on-scroll grey-text text-lighten-3 light">
     No, however we encourage you to step outside of your comfort zone and try something new :).
   </blockquote>
   <br>
-  <h5 class="grey-text text-lighten-3">Where is it?</h5>
-  <blockquote class="fade-on-scroll grey-text text-lighten-3">
+  <h5 class="grey-text text-lighten-3 light">Where is it?</h5>
+  <blockquote class="fade-on-scroll grey-text text-lighten-3 light">
     Knack at Western will be hosted in <a href="http://www.eng.uwo.ca/cmlp/" class="orange-text">Claudette MacKay-Lassonde Pavilion (CMLP)</a> and <a href="http://www.uwo.ca/its/ctg/classrooms/spencer_engineering_building/index.html" class="orange-text">Spencer Engineering Building (SEB)</a>. Specific rooms will be announced soon!
   </blockquote>
   <br>
-  <h5 class="grey-text text-lighten-3">What should I bring?</h5>
-  <blockquote class="fade-on-scroll grey-text text-lighten-3">
+  <h5 class="grey-text text-lighten-3 light">What should I bring?</h5>
+  <blockquote class="fade-on-scroll grey-text text-lighten-3 light">
     <p>
       If you are running a workshop, you should bring the basic materials that you need for your workshop. We can provide you with some of the things that you need for your workshop, however. All of this can be worked out in our <a href="https://seran.typeform.com/to/suWxpV" class="orange-text">application form</a>
     </p>
@@ -142,7 +143,7 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">Knack at Western 2017</h5>
+        <h5 class="white-text light">Knack at Western 2017</h5>
 
       </div>
     </div>
