Adjusted scroll fade

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
     <p class="fade-on-scroll center grey-text text-lighten-3 flow-text">The flip side is that students have the opportunity to attend these workshops throughout the event.</p>
 
-    <blockquote class="flow-text grey-text text-lighten-3">
-      We want to create more of a 'Maker' culture at Western and provide a learning experience which is unlike anything you can find in a classroom.
+    <blockquote class="flow-text grey-text text-lighten-3 fade-on-scroll">
+      We want to create more of a 'maker' culture at Western and provide a learning experience which is unlike anything you can find in a classroom.
     </blockquote>
     <br>
 
