Fixed typos and rwording

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     <div class="section">
     <h1 class="fade-on-scroll center grey-text text-lighten-3 light">How it Works</h1>
 
-    <p class="fade-on-scroll center grey-text text-lighten-3 flow-text">Knack at Western consists is an event that lets students run workshops that give handson training on a tangible, new skill.</p>
-
-    <p class="fade-on-scroll center grey-text text-lighten-3 flow-text">The flip side is that students have the opportunity to attend these workshops throughout the event.</p>
-
-    <blockquote class="flow-text grey-text text-lighten-3 fade-on-scroll">
-      We want to create more of a 'maker' culture at Western and provide a learning experience which is unlike anything you can find in a classroom.
+    <p class="fade-on-scroll center grey-text text-lighten-3 flow-text">Knack at Western is an event that lets students run workshops about hands-on tangible skills.</p>
+    <br>
+    <p class="fade-on-scroll center grey-text text-lighten-3 flow-text">By the end of each workshop, attendees will have a knack for a new skill!</p>
+    <br>
+    <blockquote class="flow-text center grey-text text-lighten-3 fade-on-scroll">
+      We want to create a 'maker' culture at Western and provide a learning experience unlike anything you can find in a classroom.
     </blockquote>
     <br>
 
