--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <br><br>
       <div class="row center">
         <div class="fade-on-load"><img src="assets/banner.jpeg" class="responsive-img hoverable"></div>
-        <h5 class="grey-text text-lighten-3 fade-on-load light ">February 4, 2017</h5>
+        <h5 class="grey-text text-lighten-3 fade-on-load light ">February 4, 2017 - 11:00 to 6:30</h5>
         <br><br>
         <p class="flow-text grey-text text-lighten-3" id="event-description">University is focused on learning things out a textbook, but where does that leave your everyday skills?</p>
         <i class="fade-on-load orange-text large material-icons">keyboard_arrow_down</i>
@@ -42,9 +42,8 @@
     <div class="section">
     <h1 class="fade-on-scroll center grey-text text-lighten-3 light">How it Works</h1>
 
-    <p class="fade-on-scroll center grey-text text-lighten-3 flow-text">Knack at Western is an event that lets students run workshops about hands-on tangible skills.</p>
-    <br>
-    <p class="fade-on-scroll center grey-text text-lighten-3 flow-text">By the end of each workshop, attendees will have a knack for a new skill!</p>
+    <p class="fade-on-scroll center grey-text text-lighten-3 flow-text">Knack at Western is a workshop to help students gain experience teaching everyday subjects to absolute beginners, and help those beginners walk away with a tangible new skill.
+    </p>
     <br>
     <blockquote class="flow-text center grey-text text-lighten-3 fade-on-scroll">
       We want to create a 'maker' culture at Western and provide a learning experience unlike anything you can find in a classroom.
@@ -52,37 +51,60 @@
     <br>
 
     <h3 class="center grey-text text-lighten-3 light">We've Broken It Down into Two Parts</h3>
-
+    <br>
     <div class="row">
-      <div class="hoverable z-depth-3 teachit-card col s12 m6">
+      <div class="z-depth-3 learnit-card col s12 m6">
+        <div class="center container">
+          <img src="assets/button.png" class="responsive-img">
+          <h4 class="white-text center">Learn It.</h4>
+          <p class="grey-text light text-lighten-2">If you're looking to learn a new, tangible skill that's outside of something could learn in any class, come to Knack's very first event! We will be hosting a variety of skill workshops including game development, tea brewing, juggling and even DJing.</p>
+
+          <p class="grey-text light text-lighten-2">
+            The cost to attend the event is $4, and will include full acess to all the workshops (including a brakfast workishop) and a shawarma/falafel lunch!
+          </p>
+
+          <p class="grey-text light text-lighten-2">
+            Oh yeah, and the first 50 people people to <a href="https://www.tilt.com/tilts/knack-at-western-17890dec" class="orange-text">sign up on our Tilt</a> get entered into a draw for a $25 gift card from Hospitality Services (that's like 14 coffees!).
+          </p>
+
+          <a href="https://www.tilt.com/tilts/knack-at-western-17890dec" id="learnit-button" class="center btn-large waves-effect waves-light orange darken-1">Sign Up Now!</a>
+          <br><br>
+        </div>
+      </div>
+      <div class=" z-depth-3 teachit-card col s12 m6">
         <div class="center container">
           <img src="assets/glove.png" class="responsive-img">
-          <h5 class="white-text center">Teach It.</h5>
+          <h4 class="white-text center">Teach It.</h4>
 
-          <p class="grey-text light text-lighten-2">This workshop is run by students for students. It will consist of sessions running anywhere from one to two hours. Your audience will get hands-on training while building the foundations for a new skill. Joining Teach It. Learn it. will give you first-hand exposure to running workshops, public speaking, but most importantly, conveying new concepts and skills to your cohorts. We will provide the space, time, audience and even materials needed for your workshop session. Your only job is to make sure you leave your peers with a new skill and have fun sharing your knowledge.</p>
-          <p class="grey-text light text-lighten-2">
-            When is it?
-            February 4 from 11am to 6:30pm
-            There will be approximately 2 time slots to teach in the morning, and 3-4 after lunch.
-          </p>
+          <p class="grey-text light text-lighten-2">This workshop is run by students for students. It consists of sessions running anywhere from one to two hours. Your audience will get hands-on training for a new skill. Teaching at Knack at Western will give you first-hand exposure to running workshops, public speaking, but most importantly, conveying new concepts and skills to your cohorts. We will provide the space, time, audience and even materials needed for your workshop session. Your only job is to make sure that you leave your peers with a new skill and have fun sharing your knowledge.</p>
           <a href="https://seran.typeform.com/to/suWxpV" id="teachit-button" class="center btn-large waves-effect waves-light orange darken-1">Apply to Teach It.</a>
           <br><br>
         </div>
       </div>
-      <div class="hoverable z-depth-3 learnit-card col s12 m6">
-        <div class="center container">
-          <img src="assets/button.png" class="responsive-img">
-          <h5 class="white-text center">Learn It.</h5>
-          <p class="grey-text light text-lighten-2">If you're looking to learn a new, tangible skill that's outside of something could learn in any class, sign up below to stay in the loop! We'll keep you updated as we continue to hash out the details. </p>
-          <a href="https://seran.typeform.com/to/TeIpWP" id="learnit-button" class="center btn-large waves-effect waves-light orange darken-1">Stay in the Loop</a>
-          <br><br>
-        </div>
-      </div>
+
     </div>
   </div>
 </div>
-<br><br>
+<br>
 
+<div class="container" id="schedule-screen">
+  <h1 class="grey-text text-lighten-3 center light">Schedule</h1>
+  <div class="container">
+    <ul class="z-depth-3 collection center indigo-text text-darken-4" id="schedule-table">
+      <li class="collection-item amber flow-text accent-3" id="schedule-item">Cooking</li>
+      <li class="collection-item amber flow-text accent-3" id="schedule-item">Yoga</li>
+      <li class="collection-item amber flow-text accent-3" id="schedule-item">Juggling</li>
+      <li class="collection-item orange flow-text darken-1" id="schedule-item">Shawarma Lunch!</li>
+      <li class="collection-item amber flow-text accent-3" id="schedule-item">Game Programming</li>
+      <li class="collection-item amber flow-text accent-3" id="schedule-item">Tea Brewing</li>
+      <li class="collection-item amber flow-text accent-3" id="schedule-item">Bicycle Basics</li>
+      <li class="collection-item amber flow-text accent-3" id="schedule-item">PowerPoint Tips and Tricks</li>
+      <li class="collection-item amber flow-text accent-3" id="schedule-item">DJing</li>
+      <li class="collection-item amber flow-text accent-3" id="schedule-item">Improv</li>
+    </ul>
+  </div>
+</div>
+<br>
 <div class="container" id="faq-screen">
   <h1 class="grey-text text-lighten-3 center light">Frequently Asked Questions</h1>
   <br>
