--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       <br><br>
       <div class="row center">
         <div class="fade-on-load"><img src="assets/banner.jpeg" class="responsive-img hoverable"></div>
+        <h5 class="grey-text text-lighten-3 fade-on-load light">Claudette MacKay - Lassonde Pavilion and Spencer Engineering Building</h5>
         <h5 class="grey-text text-lighten-3 fade-on-load light ">February 4, 2017 - 11:00 to 6:30</h5>
+
         <br><br>
         <p class="flow-text grey-text text-lighten-3" id="event-description">University is focused on learning things out a textbook, but where does that leave your everyday skills?</p>
         <i class="fade-on-load orange-text large material-icons">keyboard_arrow_down</i>
