Edited lunch menu{

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <li class="collection-item amber flow-text accent-3" id="schedule-item">Cooking</li>
       <li class="collection-item amber flow-text accent-3" id="schedule-item">Yoga</li>
       <li class="collection-item amber flow-text accent-3" id="schedule-item">Juggling</li>
-      <li class="collection-item orange flow-text darken-1" id="schedule-item">Shawarma Lunch!</li>
+      <li class="collection-item orange flow-text darken-1" id="schedule-item">Lunch!</li>
       <li class="collection-item amber flow-text accent-3" id="schedule-item">Game Programming</li>
       <li class="collection-item amber flow-text accent-3" id="schedule-item">Tea Brewing</li>
       <li class="collection-item amber flow-text accent-3" id="schedule-item">Bicycle Basics</li>
