--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p class="grey-text light text-lighten-2">If you're looking to learn a new, tangible skill that's outside of something could learn in any class, come to Knack's very first event! We will be hosting a variety of skill workshops including game development, tea brewing, juggling and even DJing.</p>
 
           <p class="grey-text light text-lighten-2">
-            The cost to attend the event is $4, and will include full acess to all the workshops (including a brakfast workishop) and a shawarma/falafel lunch!
+            The cost to attend the event is $4, and will include full acess to all the workshops (including a brakfast workishop) and lunch!
           </p>
 
           <p class="grey-text light text-lighten-2">
