Changed apply button text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a href="#about-screen">How it Works</a></li>
         <li><a href="#faq-screen">FAQ</a></li>
-        <li><a href="https://www.tilt.com/tilts/knack-at-western-17890dec">Apply</a></li>
+        <li><a href="https://www.tilt.com/tilts/knack-at-western-17890dec">Sign Up</a></li>
       </ul>
       <a class="hide-on-med-and-down brand-logo right" target="x_blank" title="follow me on facebook" href="https://www.facebook.com/events/1134831969887098/"><img class="" alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
     </div>
@@ -93,10 +93,10 @@
   <h1 class="grey-text text-lighten-3 center light">Schedule</h1>
   <div class="container">
     <ul class="z-depth-3 collection center indigo-text text-darken-4" id="schedule-table">
-      <li class="collection-item amber flow-text accent-3" id="schedule-item">Cooking</li>
+      <li class="collection-item amber flow-text accent-3" id="schedule-item">How to Make an Omelette</li>
       <li class="collection-item amber flow-text accent-3" id="schedule-item">Yoga</li>
       <li class="collection-item amber flow-text accent-3" id="schedule-item">Juggling</li>
-      <li class="collection-item orange flow-text darken-1" id="schedule-item">Lunch!</li>
+      <li class="collection-item orange flow-text darken-1" id="schedule-item">Shawarma Lunch!</li>
       <li class="collection-item amber flow-text accent-3" id="schedule-item">Game Programming</li>
       <li class="collection-item amber flow-text accent-3" id="schedule-item">Tea Brewing</li>
       <li class="collection-item amber flow-text accent-3" id="schedule-item">Bicycle Basics</li>
